react hook form installed and gaps issues fixed on auth pages

--- a/src/styles/Auth.css
+++ b/src/styles/Auth.css
@@ -23,9 +23,12 @@
   margin-bottom: 2rem;
 }
 
-.auth-container form {
+.auth-container form .formInputs {
   display: flex;
   gap: 1rem;
+}
+.auth-container form .btn {
+  width: 100%;
 }
 
 .auth-container .prompt,
